gitops/shared-services/postgres/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shared-postgres
spec:
  serviceName: shared-postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: shared-postgres
  template:
    metadata:
      labels:
        app: shared-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: shared-postgres-pvc
        - name: init-script
          ConfigMap:
            name: postgres-init-script
