gitops/shared-services/postgres/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: shared-postgres-ingress
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`*`)
      services:
        - name: shared-postgres-service
          port: 5432
